# stt

./: Cargo.toml  metadata.json
pkg/: manifest.json  scripts.json
speech_to_text/: Cargo.toml
speech_to_text/pkg/: manifest.json
speech_to_text/src/: lib.rs  structs.rs
stt_interface/: Cargo.toml
stt_interface/src/: lib.rs
